--- a/invoice_books/templates/invoice/invoice_create.html
+++ b/invoice_books/templates/invoice/invoice_create.html
@@ -1,11 +1,18 @@
 {% extends 'project/dashboard.html' %}
+
+{% block extra_styles %}
+    {% load staticfiles %}
+    <link href="{% static "css/select2.min.css" %}" rel="stylesheet"/>
+{% endblock %}
+
+
 {% block main_content %}
 
     <div class="panel panel-primary">
         <div class="panel-heading">
             Create Invoice
         </div>
-        <div class="panel-body">
+        <div class="panel-footer">
             <div class="form_errors">
                 <ul class="list-group">
                     {% for error in form.non_field_errors %}
@@ -19,10 +26,9 @@
                     <label for="id_customer" class="col-sm-2 control-label">{{ form.customer.label }}</label>
 
                     <div class="col-sm-8">
-                    <select class="form-control" id="id_customer" name="customer">
+                    <select class="form-control js_customer_select" id="id_customer" name="customer">
                         {% for key, value in form.customer.field.choices %}
-                            1, {{ form.customer.value }}, {{ key }}
-                            <option value="{{ key }}" {% if form.customer.value == key %}selected{% endif %}>{{ value }}</option>
+                            <option value="{{ key }}" {% if form.customer.value|add:"0" == key|add:"0" %}selected{% endif %}>{{ value }}</option>
                         {% endfor %}
                     </select>
                     <p id="customerHelpBlock" class="form-text text-muted">{{ form.customer.help_text }}</p>
@@ -43,43 +49,163 @@
                         {% endfor %}
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary">Create</button>
-                    </div>
-                </div>
-                <table>
-                    {{ invoice_items.management_form }}
-
-                    {% for form in invoice_items.forms %}
-                        {% if forloop.first %}
-                            <thead>
-                            <tr>
-                                {% for field in form.visible_fields %}
-                                    <th>{{ field.label|capfirst }}</th>
-                                {% endfor %}
-                            </tr>
-                            </thead>
-                        {% endif %}
-                        <tr class="{% cycle row1,row2 %} formset_row">
-                            {% for field in form.visible_fields %}
-                                <td>
-                                    {# Include the hidden fields in the form #}
-                                    {% if forloop.first %}
-                                        {% for hidden in form.hidden_fields %}
-                                            {{ hidden }}
-                                        {% endfor %}
-                                    {% endif %}
-                                    {{ field.errors.as_ul }}
-                                    {{ field }}
-                                </td>
-                            {% endfor %}
-                        </tr>
-                    {% endfor %}
-                </table>
             </form>
+        </div>
+        <div class="panel-body">
+            <div class="item_forms_div">
+                <div id="js_empty_sub_form" class="js_sub_form form-horizontal" style="display: none;">
+                    <div class="form_errors">
+                        <ul class="list-group">
+                            {% for error in invoice_items_formset.empty_form.non_field_errors %}
+                                <li class="list-group-item"><strong>{{ error|escape }}</strong></li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    <div class="form-group">
+                        <label for="{{ invoice_items_formset.empty_form.item.auto_id }}"
+                               class="col-sm-2 control-label">{{ invoice_items_formset.empty_form.item.label }}</label>
+
+                        <div class="col-sm-8">
+                            <select class="form-control js_item_select" id="{{ invoice_items_formset.empty_form.item.auto_id }}"
+                                    name="{{ invoice_items_formset.empty_form.item.html_name }}">
+                                {% for val, text in invoice_items_formset.empty_form.fields.item.choices %}
+                                    <option value="{{ val }}"{% if invoice_items_formset.empty_form.item.value|add:"0" == val|add:"0" %}
+                                            selected{% endif %}>{{ text }}</option>
+                                {% endfor %}
+                            </select>
+                            {% for error in invoice_items_formset.empty_form.item.errors %}
+                                <span class="help-block">{{ error|escape }}</span>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="{{ invoice_items_formset.empty_form.auto_id }}"
+                               class="col-sm-2 control-label">{{ invoice_items_formset.empty_form.quantity.label }}</label>
+
+                        <div class="col-sm-8">
+                            <input type="number" class="form-control" min="1"
+                                   id="{{ invoice_items_formset.empty_form.quantity.auto_id }}"
+                                   name="{{ invoice_items_formset.empty_form.quantity.html_name }}"
+                                   value="{{ invoice_items_formset.empty_form.quantity.value }}">
+                            {% for error in invoice_items_formset.empty_form.quantity.errors %}
+                                <span class="help-block">{{ error|escape }}</span>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="{{ invoice_items_formset.empty_form.auto_id }}"
+                               class="col-sm-2 control-label">{{ invoice_items_formset.empty_form.discount.label }}</label>
+
+                        <div class="col-sm-8">
+                            <input type="number" step="0.1" class="form-control" min="1"
+                                   id="{{ invoice_items_formset.empty_form.discount.auto_id }}"
+                                   name="{{ invoice_items_formset.empty_form.discount.html_name }}"
+                                   value="{{ invoice_items_formset.empty_form.discount.value }}">
+                            {% for error in invoice_items_formset.empty_form.discount.errors %}
+                                <span class="help-block">{{ error|escape }}</span>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="{{ invoice_items_formset.empty_form.DELETE.auto_id }}"
+                               class="col-sm-2 control-label">{{ invoice_items_formset.empty_form.DELETE.label }}</label>
+
+                        <div class="col-sm-8">
+                            <input type="checkbox" id="{{ invoice_items_formset.empty_form.DELETE.auto_id }}"
+                                   name="{{ invoice_items_formset.empty_form.DELETE.html_name }}"
+                                   {% if invoice_items_formset.empty_form.DELETE.value %}checked{% endif %}>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <form id="js_issue_form" class="form-horizontal" method="post">
+                    {% csrf_token %}
+                    {{ form.management_form }}
+                    <div id="js_sub_forms_table">
+                        {% for f in invoice_items_formset %}
+                            <div id="js_{{ forloop.counter0 }}_sub_form" class="js_sub_form">
+                                <div class="form_errors">
+                                    <ul class="list-group">
+                                        {% for error in f.non_field_errors %}
+                                            <li class="list-group-item"><strong>{{ error|escape }}</strong></li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                                <div class="form-group">
+                                    <label for="{{ f.item.auto_id }}"
+                                           class="col-sm-2 control-label">{{ f.item.label }}</label>
+
+                                    <div class="col-sm-8">
+                                        <select class="form-control js_item_select" id="{{ f.item.auto_id }}"
+                                                name="{{ f.item.html_name }}">
+                                            {% for val, text in f.fields.item.choices %}
+                                                <option value="{{ val }}"{% if f.item.value|add:"0" == val|add:"0" %}
+                                                        selected{% endif %}>{{ text }}</option>
+                                            {% endfor %}
+                                        </select>
+                                        {% for error in f.item.errors %}
+                                            <span class="help-block">{{ error|escape }}</span>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="f.quantity.auto_id"
+                                           class="col-sm-2 control-label">{{ f.quantity.label }}</label>
+
+                                    <div class="col-sm-8">
+                                        <input type="number" class="form-control" min="1" id="{{ f.quantity.auto_id }}"
+                                               name="{{ f.quantity.html_name }}"
+                                               value="{{ f.quantity.value }}">
+                                        {% for error in f.quantity.errors %}
+                                            <span class="help-block">{{ error|escape }}</span>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="f.discount.auto_id"
+                                           class="col-sm-2 control-label">{{ f.discount.label }}</label>
+
+                                    <div class="col-sm-8">
+                                        <input type="number" step="0.01" class="form-control" min="1" id="{{ f.discount.auto_id }}"
+                                               name="{{ f.discount.html_name }}"
+                                               value="{{ f.discount.value }}">
+                                        {% for error in f.discount.errors %}
+                                            <span class="help-block">{{ error|escape }}</span>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="{{ f.DELETE.auto_id }}"
+                                           class="col-sm-2 control-label">{{ f.DELETE.label }}</label>
+
+                                    <div class="col-sm-8">
+                                        <input type="checkbox" id="{{ f.DELETE.auto_id }}"
+                                               name="{{ f.DELETE.html_name }}"
+                                               {% if f.DELETE.value %}checked{% endif %}>
+                                    </div>
+                                </div>
+                                <hr>
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <div class="clearfix">
+                        <div class="issue_form_actions">
+                            <input type="button" id="js_add_item" class="btn btn-default" value="Add More Items">
+                        </div>
+                        <div class="issue_form_submit">
+                            <input type="submit" id="js_issue_item" class="btn btn-success" value="Bill Above Items"/>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
     <a href="{% url 'invoices:invoice_list' %}">Cancel</a>
 
+{% endblock %}
+{% block extra_scripts %}
+    {% load staticfiles %}
+    <script src="{% static "js/select2.min.js" %}"></script>
+    <script src="{% static "js/auto_complete.js" %}"></script>
+    <script src="{% static "js/provision.js" %}"></script>
 {% endblock %}
