--- a/invoice_books/templates/project/base.html
+++ b/invoice_books/templates/project/base.html
@@ -9,6 +9,10 @@
     <!-- Core CSS - Include with every page -->
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+
+    {% block extra_styles %}
+    {% endblock %}
+
 </head>
 <body>
 {% block body_content %}
@@ -77,7 +81,7 @@
 <script src="{% static 'js/jquery.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.js' %}"></script>
 
-{% block javascript %}
+{% block extra_scripts %}
 {% endblock %}
 
 
